components/instances/minio-s3-storage/base/minio-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio-api
  namespace: rhoai-model-registries
  labels:
    app: minio
spec:
  ports:
  - port: 9000
    targetPort: 9000
    name: api
  selector:
    app: minio
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: minio-console
  namespace: rhoai-model-registries
  labels:
    app: minio
spec:
  ports:
  - port: 9001
    targetPort: 9001
    name: console
  selector:
    app: minio
  type: ClusterIP
