components/instances/minio-s3-storage/base/minio-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: minio-console
  namespace: rhoai-model-registries
  labels:
    app: minio
spec:
  to:
    kind: Service
    name: minio-console
  port:
    targetPort: console
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
